# OscProxy

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Organelle/: Install.txt
Organelle/Clients/: run_linux.sh  run_macos.sh  run_windows.cmd
Organelle/Clients/linux/: OscProxy
Organelle/Clients/macos/: OscProxy
Organelle/OscHost/: OscProxy  manifest.txt  run.sh
Organelle/OscOrganelle/: run.sh
oscpack/: CMakeLists.txt
